fix minor issues regarding alignment

--- a/src/component/RecommendedForYouVueSlider/RecommendedForYouVueSlider.style.scss
+++ b/src/component/RecommendedForYouVueSlider/RecommendedForYouVueSlider.style.scss
@@ -9,7 +9,7 @@ html {
     &-Container {
       width: 100%;
       font-size: 16px;
-      margin: 50px 0px;
+      margin: 30px 0px;
       font-weight: var(--fw-demi);
 
       @include mobile() {
@@ -90,7 +90,7 @@ html {
           display: none;
         }
       }
-      padding-bottom: 25px !important;
+      padding-bottom: 0 !important;
       @include before-desktop {
         padding-bottom: 0 !important;
       }
@@ -155,7 +155,7 @@ html {
       }
 
       #productName {
-        width: 80%;
+        width: 100%;
         display: block;
         font-size: 13px;
         color: #4a4a4a;
